# retro-book-trickswindowsgamegurus

./: README.md  build.ninja  meson.build
ORIGINAL/: ERRATA.TXT  README.TXT
ORIGINAL/T3DCHAP01/: BLACKBOX.CPP  BLACKBOX.H  FREAKOUT.CPP
ORIGINAL/T3DCHAP02/: DEMO2_1.CPP  DEMO2_2.CPP  DEMO2_3.CPP  DEMO2_4.CPP  DEMO2_5.CPP
ORIGINAL/T3DCHAP03/: DEMO3_1.CPP  DEMO3_1.RC  DEMO3_10.CPP  DEMO3_11.CPP  DEMO3_12.CPP  DEMO3_13.CPP  DEMO3_14.CPP  DEMO3_1RES.H  DEMO3_2.CPP  DEMO3_2.RC  DEMO3_2RES.H  DEMO3_3.CPP  DEMO3_3.RC  DEMO3_3RES.H  DEMO3_4.CPP  DEMO3_4.RC  DEMO3_4RES.H  DEMO3_5.CPP  DEMO3_6.CPP  DEMO3_7.CPP  DEMO3_8.CPP  DEMO3_9.CPP
ORIGINAL/T3DCHAP04/: DEMO4_1.CPP  DEMO4_2.CPP  DEMO4_3.CPP  DEMO4_4.CPP  DEMO4_5.CPP  DEMO4_6.CPP  DEMO4_7.CPP  DEMO4_8.CPP  DEMO4_9.CPP  T3DCONSOLE.CPP
ORIGINAL/T3DCHAP05/: DEMO5_1.CPP
ORIGINAL/T3DCHAP06/: DEMO6_1.CPP  DEMO6_2.CPP  DEMO6_3.CPP
ORIGINAL/T3DCHAP07/: DEMO7_1.CPP  DEMO7_10.CPP  (+17 more)
assets/: paldata2.pal
src/: demo12_1.cpp  demo12_1_16b.cpp  demo12_2.cpp  demo12_2_16b.cpp  demo12_3.cpp  demo12_4.cpp  demo12_4_16b.cpp  demo12_5.cpp  demo12_5_16b.cpp  demo12_6.cpp  demo12_6_16b.cpp  demo12_7.cpp  demo12_7_16b.cpp  demo12_8.cpp  demo12_8_16b.cpp  demo13_1.cpp  demo13_10.cpp  demo13_11.cpp  demo13_11_16b.cpp  demo13_1_16b.cpp  demo13_2.cpp  demo13_2_16b.cpp  demo13_3.cpp  demo13_3_16b.cpp  demo13_4.cpp  demo13_4_16b.cpp  demo13_5.cpp  demo13_5_16b.cpp  demo13_6.cpp  demo13_6_16b.cpp  demo13_7.cpp  demo13_7_16b.cpp  demo13_8.cpp  demo13_8_16b.cpp  demo13_9.cpp  demo13_9_16b.cpp  demo7_1.cpp  demo7_10.cpp  demo7_11.cpp  demo7_13.cpp  (+32 more)
(+100 files in other folders)
