project('retro-book-trickswindowsgamegurus', 'cpp',
  default_options: ['warning_level=1', 'buildtype=debug'])

sdl2 = dependency('sdl2')

link_args = []
if host_machine.system() == 'darwin'
  link_args += ['-Wl,-undefined,dynamic_lookup']
endif

demos = [
  'demo7_1',
  'demo7_2',
  'demo7_3',
  'demo7_7',
  'demo7_8',
  'demo7_10',
  'demo7_11',
  'demo7_13',
  'demo7_14',
  'demo7_15',
  'demo7_16',
  'demo8_1',
  'demo8_2',
  'demo8_3',
  'demo8_4',
  'demo8_5',
  'demo8_6',
  'demo8_7',
  'demo8_8',
  'demo8_9',
  'demo8_10',
  'demo8_10_16b',
  'demo8_11',
  'demo8_11_16b',
  'demo8_12',
  'demo8_12_16b',
  'demo9_1',
  'demo9_1_16b',
  'demo9_2',
  'demo9_2_16b',
  'demo9_3',
  'demo9_3_16b',
  'demo9_4',
  'demo9_4_16b',
  'demo12_1',
  'demo12_1_16b',
  'demo12_2',
  'demo12_2_16b',
  'demo12_3',
  'demo12_4',
  'demo12_4_16b',
  'demo12_5',
  'demo12_5_16b',
  'demo12_6',
  'demo12_6_16b',
  'demo12_7',
  'demo12_7_16b',
  'demo12_8',
  'demo12_8_16b',
  'demo13_1',
  'demo13_1_16b',
  'demo13_2',
  'demo13_2_16b',
  'demo13_3',
  'demo13_3_16b',
  'demo13_4',
  'demo13_4_16b',
  'demo13_5',
  'demo13_5_16b',
  'demo13_6',
  'demo13_6_16b',
  'demo13_7',
  'demo13_7_16b',
  'demo13_8',
  'demo13_8_16b',
  'demo13_9',
  'demo13_9_16b',
  'demo13_10',
  'demo13_11',
  'demo13_11_16b',
  'freakout',
  'shadow',
]

foreach demo : demos
  executable(demo, 'src' / demo + '.cpp',
    dependencies: sdl2,
    link_args: link_args)
endforeach
